исправил ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -35,21 +35,25 @@
           </ul>
         </nav>
         <div class="contacts-header">
-           <ul class="header-list" >
-                <li>
-                   <a class="header-address-link" href="">
-                      <svg class="header-svg">
-                       <use href="./images/sprite.svg#mail"></use>
-                     </svg>info@devstudio.com</a>
-                 </li>  
-                  <li>
-                   <a class="header-address-link" href="">
-                      <svg class="header-svg">
-                       <use href="./images/sprite.svg#phone"></use>
-                     </svg>+38 096 111 11 11</a>
-                 </li>  
-             </ul>
-         </div>
+          <ul class="header-list">
+            <li>
+              <a class="header-address-link" href="">
+                <svg class="header-svg">
+                  <use href="./images/sprite.svg#mail"></use>
+                </svg>
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-address-link" href="">
+                <svg class="header-svg">
+                  <use href="./images/sprite.svg#phone"></use>
+                </svg>
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -70,9 +74,9 @@
           <ul class="about-us list">
             <li class="about-us-list">
               <div class="about-us-img-back">
-                 <svg class="aboutus-svg-back">
-                      <use href="./images/sprite.svg#icon-antenna-1"></use>
-                    </svg>
+                <svg class="aboutus-svg-back">
+                  <use href="./images/sprite.svg#icon-antenna-1"></use>
+                </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
@@ -83,8 +87,8 @@
             <li class="about-us-list">
               <div class="about-us-img-back">
                 <svg class="aboutus-svg-back">
-                      <use href="./images/sprite.svg#icon-clock-1"></use>
-                    </svg>
+                  <use href="./images/sprite.svg#icon-clock-1"></use>
+                </svg>
               </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
@@ -94,9 +98,9 @@
             </li>
             <li class="about-us-list">
               <div class="about-us-img-back">
-                 <svg id="svg1" class="aboutus-svg-back">
-                      <use href="./images/sprite.svg#icon-diagram-1"></use>
-                    </svg>
+                <svg id="svg1" class="aboutus-svg-back">
+                  <use href="./images/sprite.svg#icon-diagram-1"></use>
+                </svg>
               </div>
 
               <h3 class="title">Планирование</h3>
@@ -108,8 +112,8 @@
             <li class="about-us-list">
               <div class="about-us-img-back">
                 <svg class="aboutus-svg-back">
-                      <use href="./images/sprite.svg#icon-astronaut-1"></use>
-                    </svg>
+                  <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
               <p class="description">
@@ -187,8 +191,8 @@
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a class="social-list-item-link"href=""
-                    ><svg class="social-list-item-link-svg">
+                  <a class="social-list-item-link" href="">
+                    <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -206,13 +210,13 @@
               <h3 class="team-name-title">Ольга Иванова</h3>
               <p class="team-list-item-position">Frontend Developer</p>
               <ul class="social-list list">
-                <li class="social-list-item">
+                <li>
+                  class="social-list-item">
                   <a class="social-list-item-link" href="">
                     <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
-                </li>
                 </li>
                 <li class="social-list-item">
                   <a class="social-list-item-link" href="">
@@ -221,14 +225,14 @@
                     </svg>
                   </a>
                 </li>
-               <li class="social-list-item">
+                <li class="social-list-item">
                   <a class="social-list-item-link" href="">
                     <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-               <li class="social-list-item">
+                <li class="social-list-item">
                   <a
                     class="social-list-item-link"
                     href=""
@@ -251,7 +255,7 @@
               <h3 class="team-name-title">Андрей Шевченко</h3>
               <p class="team-list-item-position">Marketing</p>
               <ul class="social-list list">
-               <li class="social-list-item">
+                <li class="social-list-item">
                   <a class="social-list-item-link" href="">
                     <svg class="social-list-item-link-svg">
                       <use href="./images/sprite.svg#icon-instagram"></use>
@@ -335,45 +339,45 @@
           <ul class="clients-list list">
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo1"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo2"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo3"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo4"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo5"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link-list" href="">
-                    <svg class="clients-list-item-link-svg">
-                      <use href="./images/sprite.svg#logo6"></use>
-                    </svg>
-                  </a>
+                <svg class="clients-list-item-link-svg">
+                  <use href="./images/sprite.svg#logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -422,24 +426,30 @@
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка инстаграма"
                 ><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-instagram1"></use>
-                    </svg></a>
+                  <use href="./images/sprite.svg#icon-instagram1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
-              <a class="footer-link-list" href="" aria-label="иконка твиттера"><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-twitter1"></use>
-                    </svg></a>
+              <a class="footer-link-list" href="" aria-label="иконка твиттера">
+                <svg class="footer-list-item-link-svg">
+                  <use href="./images/sprite.svg#icon-twitter1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
-              <a class="footer-link-list" href="" aria-label="иконка фейсбука"><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-facebook1"></use>
-                    </svg></a>
+              <a class="footer-link-list" href="" aria-label="иконка фейсбука"
+                ><svg class="footer-list-item-link-svg">
+                  <use href="./images/sprite.svg#icon-facebook1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка линкедина"
                 ><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-linkedin1"></use>
-                    </svg></a>
+                  <use href="./images/sprite.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
