--- a/portfolio.html
+++ b/portfolio.html
@@ -35,21 +35,25 @@
           </ul>
         </nav>
         <div class="contacts-header">
-           <ul class="header-list" >
-                <li>
-                   <a class="header-address-link" href="">
-                      <svg class="header-svg">
-                       <use href="./images/sprite.svg#mail"></use>
-                     </svg>info@devstudio.com</a>
-                 </li>  
-                  <li>
-                   <a class="header-address-link" href="">
-                      <svg class="header-svg">
-                       <use href="./images/sprite.svg#phone"></use>
-                     </svg>+38 096 111 11 11</a>
-                 </li>  
-             </ul>
-         </div>
+          <ul class="header-list">
+            <li>
+              <a class="header-address-link" href="">
+                <svg class="header-svg">
+                  <use href="./images/sprite.svg#mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="header-address-link" href="">
+                <svg class="header-svg">
+                  <use href="./images/sprite.svg#phone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -185,28 +189,36 @@
           <p class="desctext"><b class="footer-join-us">ПРИСОЕДИНЯЙТЕСЬ</b></p>
           <ul class="social-links list">
             <li class="social-links-item-link link">
-              <a class="footer-link-list" href="" aria-label="иконка инстаграма"
-                ><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-instagram1"></use>
-                    </svg></a>
+              <a
+                class="footer-link-list"
+                href=""
+                aria-label="иконка инстаграма"
+              >
+                <svg class="footer-list-item-link-svg">
+                  <use href="./images/sprite.svg#icon-instagram1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
-              <a class="footer-link-list" href="" aria-label="иконка твиттера"><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-twitter1"></use>
-                    </svg></a></a>
+              <a class="footer-link-list" href="" aria-label="иконка твиттера"
+                ><svg class="footer-list-item-link-svg">
+                  <use href="./images/sprite.svg#icon-twitter1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка фейсбука">
                 <svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-facebook1"></use>
-                    </svg>
-                  </a>
+                  <use href="./images/sprite.svg#icon-facebook1"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item-link link">
               <a class="footer-link-list" href="" aria-label="иконка линкедина"
                 ><svg class="footer-list-item-link-svg">
-                      <use href="./images/sprite.svg#icon-linkedin1"></use>
-                    </svg></a></a>
+                  <use href="./images/sprite.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
